--- a/userappAN/src/index.html
+++ b/userappAN/src/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <script
-  src="https://maps.googleapis.com/maps/api/js?key=%KEY%&libraries=places"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJEer3derTQhMEWJRK07jRvJmBWquE3y8
+  &libraries=places"
   defer
 ></script>
 </head>
