--- a/userappAN/src/index.html
+++ b/userappAN/src/index.html
@@ -12,5 +12,11 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFrq9-McMQGviQ2dCfdhbwj_6M2QkbEfE&libraries=places&v=weekly"
+  async
+  defer></script>
+
 </body>
 </html>
