--- a/userappAN/src/index.html
+++ b/userappAN/src/index.html
@@ -14,6 +14,8 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFrq9-McMQGviQ2dCfdhbwj_6M2QkbEfE&libraries=places&v=weekly"
   async
   defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
   </head>
   <body class="mat-typography">
